--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -151,6 +151,18 @@ input, select, textarea {
 		-webkit-transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
 		-ms-transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
 		transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
+		/*border-bottom: dotted 1px rgba(255, 255, 255, 0.5);*/
+		/*text-decoration: none;*/
+		/*color: inherit;*/
+		/*color: #FA5C5C;*/
+		color: #5DB0D7;
+	}
+
+	a.undecorated-link {
+		-moz-transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
+		-webkit-transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
+		-ms-transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
+		transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
 		border-bottom: dotted 1px rgba(255, 255, 255, 0.5);
 		text-decoration: none;
 		color: inherit;
@@ -1593,6 +1605,8 @@ input, select, textarea {
 		
 		iframe
 		{
+			margin: auto;
+			display: block;
 			/*
 			-moz-transform: translateY(0.25rem);
 			-webkit-transform: translateY(0.25rem);
@@ -1644,6 +1658,31 @@ input, select, textarea {
 			flex-flow: row wrap;
 			justify-content: center;
 			padding: 0px;
+		}
+
+		#main article.project-article
+		{
+			/*
+			-moz-transform: translateY(0.25rem);
+			-webkit-transform: translateY(0.25rem);
+			-ms-transform: translateY(0.25rem);
+			transform: translateY(0.25rem);
+			-moz-transition: opacity 0.325s ease-in-out, -moz-transform 0.325s ease-in-out;
+			-webkit-transition: opacity 0.325s ease-in-out, -webkit-transform 0.325s ease-in-out;
+			-ms-transition: opacity 0.325s ease-in-out, -ms-transform 0.325s ease-in-out;
+			transition: opacity 0.325s ease-in-out, transform 0.325s ease-in-out;
+			*/
+			/*padding: 4.5rem 2.5rem 1.5rem 2.5rem ;*/
+			/*
+			position: relative;
+			width: 100%;
+			max-width: 100%;
+			background-color: rgba(27, 31, 34, 0.0); *//*0.85*/
+			/*
+			border-radius: 4px;
+			*/
+			/*
+			opacity: 0; *//*This is important for fade!*/
 		}
 		
 		div.project-div {
