--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1652,6 +1652,25 @@ input, select, textarea {
 		}
 
 
+		div.div-article 
+		{
+			-moz-transform: translateY(0.25rem);
+			-webkit-transform: translateY(0.25rem);
+			-ms-transform: translateY(0.25rem);
+			transform: translateY(0.25rem);
+			-moz-transition: opacity 0.325s ease-in-out, -moz-transform 0.325s ease-in-out;
+			-webkit-transition: opacity 0.325s ease-in-out, -webkit-transform 0.325s ease-in-out;
+			-ms-transition: opacity 0.325s ease-in-out, -ms-transform 0.325s ease-in-out;
+			transition: opacity 0.325s ease-in-out, transform 0.325s ease-in-out;
+			padding: 2rem 2.5rem 1.5rem 2.5rem ;
+			position: relative;
+			width: 40rem;
+			max-width: 100%;
+			background-color: rgba(27, 31, 34, 0.85); /*0.85*/
+			border-radius: 4px;
+			/*opacity: 0; *//*This is important for fade!*/
+		}
+
 		.project-holder 
 		{
 			display: flex;
